# taflzero

./: .gitignore  Cargo.toml  LICENSE  README.md  default_nn.onnx  gen-dataset.mjs  orchestrate-zero.mjs  package.json  shuf.js  shuffle.sh  tsconfig.json  tsup.config.lib.ts  tsup.config.ts  vitest.config.ts
depth0/: fc1.9.weights.csv  fc2.9.weights.csv
depth2-zero-temp/: fc1.11.weights.csv  fc2.11.weights.csv
nnue-324x128-gen3/: fc1.135.weights.csv  fc1.22.weights.csv
nnue-324x256-gen4/: fc1.25.weights.csv  fc2.25.weights.csv
nnue-324x64-gen2/: fc2.52.weights.csv
nnue-fair-gen1-324x8/: fc1.132.weights.csv  fc1.86.weights.csv  fc2.132.weights.csv  fc2.86.weights.csv
nnue-fair-gen10-324x64/: fc1.12.weights.csv  fc1.16.weights.csv  fc1.18.weights.csv  fc2.12.weights.csv  fc2.16.weights.csv  fc2.18.weights.csv
nnue-fair-gen12-324x64/: fc1.53.weights.csv  fc2.53.weights.csv
nnue-fair-gen13-324x128/: fc1.10.weights.csv  fc1.13.weights.csv  fc1.135.weights.csv  fc1.17.weights.csv  fc1.22.weights.csv  fc1.24.weights.csv  fc1.4.weights.csv  fc1.5.weights.csv  fc1.7.weights.csv  fc2.10.weights.csv  fc2.13.weights.csv  fc2.135.weights.csv  fc2.17.weights.csv  fc2.22.weights.csv  fc2.24.weights.csv  fc2.4.weights.csv  fc2.5.weights.csv  fc2.7.weights.csv
nnue-fair-gen14-324x64/: fc1.2.weights.csv  fc1.31.weights.csv  fc1.6.weights.csv  fc2.2.weights.csv  fc2.31.weights.csv  fc2.6.weights.csv
nnue-fair-gen15-324x64/: fc1.8.weights.csv  fc2.8.weights.csv
nnue-fair-gen2-324x8/: fc1.34.weights.csv  fc1.62.weights.csv  fc2.34.weights.csv  fc2.62.weights.csv
(+303 files in other folders)
