[package]
name = "taflzero"
version = "0.1.0"
edition = "2024"

[dependencies]

rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }
rand_distr = "0.5"
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
js-sys = "0.3.82"
web-sys = { version = "0.3", features = [
    "Window",
    "Event",
    "CustomEvent",
    "CustomEventInit",
    "console"
] }
console_error_panic_hook = "0.1.7"
once_cell = "1.21.3"

[features]
default = ["cuda", "directml"]
cuda = ["ort/cuda"]
directml = ["ort/directml"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "=2.0.0-rc.11" }
ndarray = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tract-onnx = "0.21.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
incremental = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.profiling]
inherits = "release"
strip = false
lto = "thin"
codegen-units = 4

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O0", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
